# eeg-adhd-clasificacion

./: .coveragerc  .dockerignore  .env.example  .gitignore  LICENSE  README.md  alembic.ini  compose.yml  cv_results_by_fold.csv  cv_results_summary.csv  docker-compose.yml  enlaces.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml
alembic/: env.py
app/: streamlit_app.py
backend/: Dockerfile  config.py  constants.py  main.py  model_registry.py  schemas.py
backend/api/: health.py  (+2 more)
demo/: data_load.py  epochs.py  pipeline.py  preprocessing.py  spectral_features.py  split.py  test.py  train.py
docs/: analisis_codigo.md  anexo_a_plan_proyecto.md  anexo_b_requisitos.md  anexo_c_diseno.md  anexo_d_doc_programador.md  enlaces.md  licencias.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
models/: model_metadata.json
notebook/: tuning_ligero_rf_svc.ipynb
notebooks/: tuning_ligero_rf_svc.ipynb
results/: best_model_config.json  dl_best_model_config.json  dl_cv_fold_results.csv  dl_cv_summary.csv  feature_importance.csv  feature_importance_by_channel.csv  ml_cv_fold_results.csv  ml_cv_summary.csv  model_comparison.md  model_comparison_paired.csv  model_comparison_summary.csv
scripts/: __init__.py  compare_models.py  constants.py  data_load.py  epochs.py  evaluation.py  export_model.py  export_model_dl.py  feature_importance.py  feature_pipeline.py  features.py  inference.py  inference_dl.py  ml_model_registry.py  paths.py  pipeline.py  predict_file.py  preprocessing.py  signal_preprocessing.py  spectral_features.py  split.py  tf_models.py  train.py  train_dl.py  train_ml.py  validators.py  visual.py
tests/: conftest.py  sample_eeg_prediction.csv  test_basicos.py
(+130 files in other folders)
